🐛 fix(general): redirect to link without html extention in url

--- a/website/static/index.html
+++ b/website/static/index.html
@@ -4,11 +4,11 @@
         <meta charset="UTF-8">
         <meta http-equiv="refresh" content="0; url=docs/getting-started.html">
         <script type="text/javascript">
-            window.location.href = 'docs/getting-started.html'
+            window.location.href = 'docs/getting-started'
         </script>
         <title>KintoHub - Docs</title>
     </head>
     <body>
-        If you are not redirected automatically, follow this <a href="docs/getting-started.html">link</a>.
+        If you are not redirected automatically, follow this <a href="docs/getting-started">link</a>.
     </body>
 </html>
