🚧wip(docs): restructure menu & update design

--- a/website/static/index.html
+++ b/website/static/index.html
@@ -2,13 +2,13 @@
 <html lang="en-US">
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="refresh" content="0; url=docs/getting-started.html">
+        <meta http-equiv="refresh" content="0; url=docs/introduction/getting-started">
         <script type="text/javascript">
-            window.location.href = 'docs/getting-started'
+            window.location.href = 'docs/introduction/getting-started'
         </script>
-        <title>KintoHub - Docs</title>
+        <title>KintoHub Docs</title>
     </head>
     <body>
-        If you are not redirected automatically, follow this <a href="docs/getting-started">link</a>.
+        If you are not redirected automatically, follow this <a href="docs/introduction/getting-started">link</a>.
     </body>
 </html>
